# Smart_vision

./: .dockerignore  .gitignore  capture_screenshots.py  readme.md  test.ipynb  test.py  test_search.py  to_do_list.md
smart-vision-api/: README.md  pyproject.toml  requirements.txt
smart-vision-api/docs/: releasenote.md
smart-vision-api/scripts/: run_dev.sh  run_docker.sh  run_prod.sh
smart-vision-api/smart_vision_api/: main.py
smart-vision-api/smart_vision_api/api/v1/: agent.py  auth.py  hybrid.py
smart-vision-api/smart_vision_api/core/: config.py
smart-vision-api/smart_vision_api/schemas/: auth.py  payload.py
smart-vision-api/smart_vision_api/services/: agent.py  hybrid.py  web_search.py
smart-vision-api/tests/equiptment_categorization/: request_01.json  request_02.json  request_03.json  request_04.json  response_01.json  response_02.json  response_04.json  response_05.json
smart-vision-model/: .env.example  README.md  pyproject.toml  requirements.txt
smart-vision-model/docs/: hybrid_pipeline_overview_ko.md  releasenote.md
smart-vision-model/smart_match/: __init__.py
smart-vision-model/smart_match/hybrid_search_pipeline/: README.md  hybrid_pipeline_runner.py
smart-vision-model/smart_match/hybrid_search_pipeline/data_collection/: README.md  tracker_dataset.py
smart-vision-model/smart_match/hybrid_search_pipeline/preprocessing/: README.md  metadata_normalizer.py  pipeline.py
smart-vision-model/smart_match/hybrid_search_pipeline/preprocessing/captioning/: qwen3_captioner.py
smart-vision-model/smart_match/hybrid_search_pipeline/preprocessing/embedding/: bge_m3_encoder.py  bge_vl_encoder.py
smart-vision-model/smart_match/hybrid_search_pipeline/preprocessing/image_classification/: classifier.py
smart-vision-model/smart_match/hybrid_search_pipeline/preprocessing/ocr/: OCR.py  (+1 more)
smart-vision-model/smart_match/hybrid_search_pipeline/retrieval/: README.md  milvus_counters.py  milvus_hybrid_index.py
smart-vision-model/smart_match/hybrid_search_pipeline/search/: README.md  fusion_retriever.py
smart-vision-model/smart_match/scripts/: README.md
smart-vision-model/smart_match_model.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+185 files in other folders)
